# fast_zero

./: .gitignore  database.db  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 3f297b556d08_create_users_table.py
tests/: conftest.py  test_app.py  test_models.py
