[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_zero"}]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "0.101.*"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.1.1"}
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
ruff = "^0.0.282"
httpx = "^0.24.1"

[tool.taskipy.tasks]
format = "blue . && isort ."
lint = 'ruff . && blue --check . --diff'
run = "uvicorn fast_zero.app:app --reload"
pre_test = 'task lint'
test = "pytest --cov=fast_zero -vv -x -s"
post_test = "coverage html"

[tool.blue]
extend-exclude = '(migrations/)'

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
